tests/script_runtime_errors/bad_index_type/error.txt
Error: 
    2 | event[a]
      |       ^ Conflicting types, got array but expected string